# vi-speech-to-text

./: .gitignore  README.md  example.env  pyproject.toml
src/vi-speech-to-text/: __init__.py
src/vi_speech_to_text/: __init__.py  app.py  openai_client.py  postprocess.py  transcription.py
streamlit-frontend/: app.py
